Update tampilan sampul

--- a/000-sampul-unit.tex
+++ b/000-sampul-unit.tex
@@ -5,9 +5,13 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0pt}
 
+
+\fontsize{14}{14}\selectfont
+
 \textbf{%
-    PANDUAN APLIKASI SOP KABUPATEN CIANJUR
-    \\ ROLE PERANGKAT DAERAH
+    PANDUAN APLIKASI \\
+    STANDAR OPERASIONAL PROSEDUR (SOP) \\
+    USER PERANGKAT DAERAH
 }
 
 \vspace{16pt}
@@ -20,14 +24,11 @@
 \vspace{12pt}
 
 
-
-\fontsize{11pt}{11pt}\selectfont
-
 \vspace{12pt}
 \vspace{12pt}
 
 
-\includegraphics[width=10cm,height=12cm]{media/cianjur.jpeg}
+\includegraphics[width=8cm]{media/cianjur.jpeg}
 
 \vspace{11pt}
 \vspace{11pt}
@@ -38,13 +39,20 @@
 \vspace{11pt}
 \vspace{11pt}
 \vspace{11pt}
-
-
-
-\fontsize{14}{14}\selectfont
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
+\vspace{11pt}
 
 \textbf{
-  CV PUTRA PURNAMA INDONESIA \\
+  BAGIAN ORGANISASI \\
+  SEKRETARIAT DAERAH \\
+  KABUPATEN CIANJUR \\
   TAHUN 2025
 }
 
