--- a/201-halaman-login-unit.tex
+++ b/201-halaman-login-unit.tex
@@ -26,7 +26,7 @@ memasuki halaman landing page:
     \item Jika login sebagai Role Perangkat Daerah maka akan diarahkan ke halaman Dashboard Unit Kerja dengan tampilan berikut:
     \begin{figure}[H]
         \centering
-        \includegraphics[width=12.45cm, height=4.75cm]{media/dashborad-unit-kerja/1-halaman-dashboard-probis-unit.png}
+        \includegraphics[width=12.45cm]{media/dashborad-unit-kerja/1-halaman-dashboard-probis-unit.png}
         \caption{Tampilan Halaman Dashboard}
         \label{fig:bagan-alir}
     \end{figure}
@@ -34,7 +34,7 @@ memasuki halaman landing page:
     \item Jika salah memasukkan Username atau Password maka akan muncul pesan seperti berikut:
     \begin{figure}[H]
         \centering
-        \includegraphics[width=12.45cm, height=7.75cm]{media/login/2-pesan-gagal.png}
+        \includegraphics[width=12.45cm]{media/login/2-pesan-gagal.png}
         \caption{Tampilan Pesan Gagal Login}
         \label{fig:bagan-alir}
     \end{figure}
