Penyesuaian gambar dan penambahan gambar

--- a/102-halaman-dashboard-sop-unit.tex
+++ b/102-halaman-dashboard-sop-unit.tex
@@ -4,7 +4,7 @@
 \noindent Untuk mengakses Halaman Dashboard SOP, pada daftar menu sebelah kiri klik Dashboard pada menu SOP seperti gambar berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/1-akses-dashboard-sop.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/1-akses-dashboard-sop.png}
       \caption{Akses Dashboard SOP}
       \label{fig:bagan-alir}
     \end{figure}
@@ -13,7 +13,7 @@
 Setelah diklik maka akan diarahkan ke halaman Dashboard SOP seperti berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/2-dashboard-sop.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/2-dashboard-sop.png}
       \caption{Halaman Dashboard SOP}
       \label{fig:bagan-alir}
     \end{figure}
@@ -29,7 +29,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
 
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/1-selengkapnya-total.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/1-selengkapnya-total.png}
       \caption{Tombol Selengkapnya Card Total SOP Unit}
       \label{fig:bagan-alir}
     \end{figure}
@@ -38,7 +38,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
     Setelah di klik maka akan diarahkan ke halaman daftar SOP Unit yang tersedia seperti berikut
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/1-halaman-total.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/1-halaman-total.png}
       \caption{Halaman Total SOP Unit}
       \label{fig:bagan-alir}
     \end{figure}
@@ -51,7 +51,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
 
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/2-selengkapnya-konsep.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/2-selengkapnya-konsep.png}
       \caption{Tampilan Card Konsep}
       \label{fig:bagan-alir}
     \end{figure}
@@ -59,7 +59,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
     Setelah di klik maka akan diarahkan ke halaman daftar Konsep yang tersedia seperti berikut.
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/2-halaman-konsep.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/2-halaman-konsep.png}
       \caption{Halaman Konsep SOP Unit}
       \label{fig:bagan-alir}
     \end{figure}
@@ -72,7 +72,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
 
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/3-selengkapnya-verifikasi.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/3-selengkapnya-verifikasi.png}
       \caption{Tampilan Card Verifikasi}
       \label{fig:bagan-alir}
     \end{figure}
@@ -80,7 +80,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
     Setelah di klik maka akan diarahkan ke halaman daftar Verifikasi yang tersedia seperti berikut.
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/3-halaman-verifikasi.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/3-halaman-verifikasi.png}
       \caption{Halaman Verifikasi SOP Unit}
       \label{fig:bagan-alir}
     \end{figure}
@@ -93,7 +93,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
 
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/4-selengkapnya-Aktif.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/4-selengkapnya-Aktif.png}
       \caption{Tampilan Card Aktif}
       \label{fig:bagan-alir}
     \end{figure}
@@ -101,7 +101,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
     Setelah di klik maka akan diarahkan ke halaman daftar Aktif yang tersedia seperti berikut.
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/4-halaman-aktif.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/4-halaman-aktif.png}
       \caption{Halaman Aktif SOP Unit}
       \label{fig:bagan-alir}
     \end{figure}
@@ -114,7 +114,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
 
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/5-jumlah-sop-per-unit.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/5-jumlah-sop-per-unit.png}
       \caption{Tampilan Table SOP Per Unit Kerja}
       \label{fig:bagan-alir}
     \end{figure}
@@ -122,7 +122,7 @@ Pada Menu Dashboard SOP, ditampilkan informasi jumlah Total SOP Unit, jumlah Kon
     Setelah di klik maka akan diarahkan ke halaman daftar SOP Per Unit Kerja yang tersedia seperti berikut.
     \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/dashboard-sop-unit/5-halaman-sop-per-unit.png}
+      \includegraphics[width=12.45cm]{media/dashboard-sop-unit/5-halaman-sop-per-unit.png}
       \caption{Halaman SOP Unit Per Unit Kerja}
       \label{fig:bagan-alir}
     \end{figure}
