--- a/106-halaman-periksa-unit.tex
+++ b/106-halaman-periksa-unit.tex
@@ -4,7 +4,7 @@
 \noindent Untuk mengakses Halaman Menu Periksa, pada daftar menu sebelah kiri klik Menu pada menu SOP seperti gambar berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Periksa-unit/1-menu-Periksa.png}
+      \includegraphics[width=12.45cm]{media/Periksa-unit/1-menu-Periksa.png}
       \caption{Akses Menu Periksa}
       \label{fig:bagan-alir}
     \end{figure}
@@ -13,7 +13,7 @@
 Setelah diklik maka akan diarahkan ke halaman Menu Periksa seperti berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Periksa-unit/2-halaman-Periksa.png}
+      \includegraphics[width=12.45cm]{media/Periksa-unit/2-halaman-Periksa.png}
       \caption{Halaman Menu Periksa}
       \label{fig:bagan-alir}
     \end{figure}
@@ -27,7 +27,7 @@ Pada Menu Periksa, ada beberapa fitur yang user dapat gunakan seperti Export Dat
 Untuk Export Data Periksa, klik tombol Export Periksa, maka otomatis download Data Periksa.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/1-export-Periksa.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/1-export-Periksa.png}
     \caption{Export Periksa}
     \label{fig:bagan-alir}
 \end{figure}
@@ -36,10 +36,12 @@ Untuk Export Data Periksa, klik tombol Export Periksa, maka otomatis download Da
 Berikut hasil Export Periksa.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/2-hasil-export.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/2-hasil-export.png}
     \caption{Hasil Export Periksa}
     \label{fig:bagan-alir}
 \end{figure}
+
+\newpage
 
 \subsection*{6.2 Filter Periksa}
 \addcontentsline{toc}{subsection}{6.2 Filter Periksa}
@@ -47,12 +49,10 @@ Berikut hasil Export Periksa.
 Untuk Filter Data Periksa, isi atau pilih dengan data yang diinginkan pada header table.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/3-filter-Periksa.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/3-filter-Periksa.png}
     \caption{Filter Periksa}
     \label{fig:bagan-alir}
 \end{figure}
-
-\newpage
 
 \subsection*{6.3 Detail Data Periksa}
 \addcontentsline{toc}{subsection}{6.3 Detail Data Periksa}
@@ -60,7 +60,7 @@ Untuk Filter Data Periksa, isi atau pilih dengan data yang diinginkan pada heade
 Untuk melihat detail Periksa, klik pada nama Periksa atau klik ikon mata pada kolom tabel dan akan diarahkan ke halaman detail. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/4-tombol-detail-Periksa.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/4-tombol-detail-Periksa.png}
     \caption{Akses Halaman Detail Periksa}
     \label{fig:bagan-alir}
 \end{figure}
@@ -69,22 +69,21 @@ Untuk melihat detail Periksa, klik pada nama Periksa atau klik ikon mata pada ko
 Setelah diklik maka akan diarahkan ke halaman detail Periksa. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/5-halaman-detail-Periksa.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/5-halaman-detail-Periksa.png}
     \label{fig:bagan-alir}
 \end{figure}
 \vspace{-2em}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/5-halaman-detail-Periksa-2.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/5-halaman-detail-Periksa-2.png}
     \label{fig:bagan-alir}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Periksa-unit/5-halaman-detail-Periksa-3.png}
+    \includegraphics[width=12.45cm]{media/Periksa-unit/5-halaman-detail-Periksa-3.png}
     \caption{Halaman Detail Periksa}
     \label{fig:bagan-alir}
 \end{figure}
 \vspace{-2em}
 
-Pada halaman detail Periksa, user ditampilkan informasi Periksa yang terkait dengan Periksa yang dipilih. Selain itu user dapat melakukan Export (PDF atau Excel) dan melihat riwayat Periksa.
-
+Pada halaman detail Periksa, user ditampilkan informasi Periksa yang terkait dengan Periksa yang dipilih. Selain itu user dapat melakukan Export PDF. Untuk hasil Export sama seperti hasil Export untuk SOP Unit.
