--- a/107-halaman-perbaikan-unit.tex
+++ b/107-halaman-perbaikan-unit.tex
@@ -4,7 +4,7 @@
 \noindent Untuk mengakses Halaman Menu Perbaikan, pada daftar menu sebelah kiri klik Menu pada menu SOP seperti gambar berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Perbaikan-unit/1-menu-Perbaikan.png}
+      \includegraphics[width=12.45cm]{media/Perbaikan-unit/1-menu-Perbaikan.png}
       \caption{Akses Menu Perbaikan}
       \label{fig:bagan-alir}
     \end{figure}
@@ -13,13 +13,13 @@
 Setelah diklik maka akan diarahkan ke halaman Menu Perbaikan seperti berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Perbaikan-unit/2-halaman-Perbaikan.png}
+      \includegraphics[width=12.45cm]{media/Perbaikan-unit/2-halaman-Perbaikan.png}
       \caption{Halaman Menu Perbaikan}
       \label{fig:bagan-alir}
     \end{figure}
     \vspace{-2em}
 
-Pada Menu Perbaikan, ada beberapa fitur yang user dapat gunakan seperti Export Data Perbaikan, Filter Data Perbaikan, Kirim Perbaikan, lihat detail data Perbaikan, dan melakukan perbaikan data. Berikut tahapan setiap fitur pada Menu Perbaikan:
+Pada Menu Perbaikan, ada beberapa fitur yang user dapat gunakan seperti Export Data Perbaikan, Filter Data Perbaikan. Berikut tahapan setiap fitur pada Menu Perbaikan:
 
 \subsection*{7.1 Export Perbaikan}
 \addcontentsline{toc}{subsection}{7.1 Export Perbaikan}
@@ -27,7 +27,7 @@ Pada Menu Perbaikan, ada beberapa fitur yang user dapat gunakan seperti Export D
 Untuk Export Data Perbaikan, klik tombol Export Perbaikan, maka otomatis download Data Perbaikan.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan-unit/1-export-Perbaikan.png}
+    \includegraphics[width=12.45cm]{media/Perbaikan-unit/1-export-Perbaikan.png}
     \caption{Export Perbaikan}
     \label{fig:bagan-alir}
 \end{figure}
@@ -36,7 +36,7 @@ Untuk Export Data Perbaikan, klik tombol Export Perbaikan, maka otomatis downloa
 % Berikut hasil Export Perbaikan.
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan-unit/2-hasil-export-Perbaikan.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan-unit/2-hasil-export-Perbaikan.png}
 %     \caption{Hasil Export Perbaikan}
 %     \label{fig:bagan-alir}
 % \end{figure}
@@ -49,7 +49,7 @@ Untuk Export Data Perbaikan, klik tombol Export Perbaikan, maka otomatis downloa
 Untuk Filter Data Perbaikan, isi atau pilih dengan data yang diinginkan pada header table.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan-unit/3-filter-Perbaikan.png}
+    \includegraphics[width=12.45cm]{media/Perbaikan-unit/3-filter-Perbaikan.png}
     \caption{Filter Perbaikan}
     \label{fig:bagan-alir}
 \end{figure}
@@ -60,7 +60,7 @@ Untuk Filter Data Perbaikan, isi atau pilih dengan data yang diinginkan pada hea
 % Untuk melakukan Kirim Perbaikan Data, klik Icon Ceklis. 
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan-unit/4-icon-ceklis.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan-unit/4-icon-ceklis.png}
 %     \caption{Kirim Perbaikan Data SOP}
 %     \label{fig:bagan-alir}
 % \end{figure}
@@ -76,7 +76,7 @@ Untuk Filter Data Perbaikan, isi atau pilih dengan data yang diinginkan pada hea
 % Untuk melihat detail Perbaikan, klik pada nama Perbaikan atau klik ikon mata pada kolom tabel dan akan diarahkan ke halaman detail. 
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan-unit/5-tombol-detail-Perbaikan.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan-unit/5-tombol-detail-Perbaikan.png}
 %     \caption{Akses Halaman Detail Perbaikan}
 %     \label{fig:bagan-alir}
 % \end{figure}
@@ -85,17 +85,17 @@ Untuk Filter Data Perbaikan, isi atau pilih dengan data yang diinginkan pada hea
 % Setelah diklik maka akan diarahkan ke halaman detail Perbaikan. 
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan/6-halaman-detail-Perbaikan.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan/6-halaman-detail-Perbaikan.png}
 %     \label{fig:bagan-alir}
 % \end{figure}
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan/6-halaman-detail-Perbaikan-2.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan/6-halaman-detail-Perbaikan-2.png}
 %     \label{fig:bagan-alir}
 % \end{figure}
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan/6-halaman-detail-Perbaikan-3.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan/6-halaman-detail-Perbaikan-3.png}
 %     \caption{Halaman Detail Perbaikan}
 %     \label{fig:bagan-alir}
 % \end{figure}
@@ -147,7 +147,7 @@ Untuk Filter Data Perbaikan, isi atau pilih dengan data yang diinginkan pada hea
 % Untuk perbaikan data SOP, bisa melalui halaman detail dengan klik tombol "Sunting Perbaikan" atau klik Icon Pencil disebelah kanan Table pada halaman Perbaikan. 
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Perbaikan-unit/6-icon-pencil.png}
+%     \includegraphics[width=12.45cm]{media/Perbaikan-unit/6-icon-pencil.png}
 %     \caption{Tombol Ubah Perbaikan}
 %     \label{fig:bagan-alir}
 % \end{figure}
