--- a/109-halaman-aktif-unit.tex
+++ b/109-halaman-aktif-unit.tex
@@ -4,7 +4,7 @@
 \noindent Untuk mengakses Halaman Menu Aktif, pada daftar menu sebelah kiri klik Menu pada menu SOP seperti gambar berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Aktif-unit/1-menu-Aktif.png}
+      \includegraphics[width=12.45cm]{media/Aktif-unit/1-menu-Aktif.png}
       \caption{Akses Menu Aktif}
       \label{fig:bagan-alir}
     \end{figure}
@@ -13,7 +13,7 @@
 Setelah diklik maka akan diarahkan ke halaman Menu Aktif seperti berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Aktif-unit/2-halaman-Aktif.png}
+      \includegraphics[width=12.45cm]{media/Aktif-unit/2-halaman-Aktif.png}
       \caption{Halaman Menu Aktif}
       \label{fig:bagan-alir}
     \end{figure}
@@ -21,13 +21,15 @@ Setelah diklik maka akan diarahkan ke halaman Menu Aktif seperti berikut:
 
 Pada Menu Aktif, ada beberapa fitur yang user dapat gunakan seperti Export Data Aktif, Filter Data Aktif, dan lihat detail data Aktif. Berikut tahapan setiap fitur pada Menu Aktif:
 
+\newpage
+
 \subsection*{9.1 Export Aktif}
 \addcontentsline{toc}{subsection}{9.1 Export Aktif}
 
 Untuk Export Data Aktif, klik tombol Export Aktif, maka otomatis download Data Aktif.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Aktif-unit/1-export-Aktif.png}
+    \includegraphics[width=12.45cm]{media/Aktif-unit/1-export-Aktif.png}
     \caption{Export Aktif}
     \label{fig:bagan-alir}
 \end{figure}
@@ -36,12 +38,12 @@ Untuk Export Data Aktif, klik tombol Export Aktif, maka otomatis download Data A
 % Berikut hasil Export Aktif.
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Aktif-unit/2-hasil-export-Aktif.png}
+%     \includegraphics[width=12.45cm]{media/Aktif-unit/2-hasil-export-Aktif.png}
 %     \caption{Hasil Export Aktif}
 %     \label{fig:bagan-alir}
 % \end{figure}
 
-\newpage
+% \newpage
 
 \subsection*{9.2 Filter Aktif}
 \addcontentsline{toc}{subsection}{9.2 Filter Aktif}
@@ -49,7 +51,7 @@ Untuk Export Data Aktif, klik tombol Export Aktif, maka otomatis download Data A
 Untuk Filter Data Aktif, isi atau pilih dengan data yang diinginkan pada header table.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Aktif-unit/3-filter-Aktif.png}
+    \includegraphics[width=12.45cm]{media/Aktif-unit/3-filter-Aktif.png}
     \caption{Filter Aktif}
     \label{fig:bagan-alir}
 \end{figure}
