--- a/main.tex
+++ b/main.tex
@@ -83,31 +83,33 @@
 % ======panduan Unit Kerja=========
 
 \ifdefined\unitkerja
-\input{201-halaman-login-unit.tex}
+\input{101-halaman-login-unit.tex}
 
 \newpage
 
-\input{208-halaman-dashboard-sop-unit.tex}
+\input{102-halaman-dashboard-sop-unit.tex}
 
 \newpage
 
-\input{209-halaman-sop-unit-unit.tex}
+\input{103-halaman-sop-unit-unit.tex}
+
+\input{104-halaman-sop-umum-unit.tex}
+
+\input{105-halaman-konsep-unit.tex}
+
+\input{106-halaman-periksa-unit.tex}
+
+\input{107-halaman-perbaikan-unit.tex}
+
+\input{108-halaman-setuju-unit.tex}
 
 \newpage
 
-\input{210-halaman-sop-umum-unit.tex}
+\input{109-halaman-aktif-unit.tex}
 
-\input{211-halaman-konsep-unit.tex}
+\newpage
 
-\input{212-halaman-periksa-unit.tex}
-
-\input{214-halaman-perbaikan-unit.tex}
-
-\input{215-halaman-setuju-unit.tex}
-
-\input{216-halaman-aktif-unit.tex}
-
-\input{216-halaman-arsip-unit.tex}
+\input{110-halaman-arsip-unit.tex}
 
 \fi
 
