--- a/104-halaman-sop-umum-unit.tex
+++ b/104-halaman-sop-umum-unit.tex
@@ -4,7 +4,7 @@
 \noindent Untuk mengakses Halaman Menu SOP Umum, pada daftar menu sebelah kiri klik Menu pada menu SOP seperti gambar berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/1-menu-sop-umum.png}
+      \includegraphics[width=12.45cm]{media/sop-umum-unit/1-menu-sop-umum.png}
       \caption{Akses Menu SOP Umum}
       \label{fig:bagan-alir}
     \end{figure}
@@ -13,7 +13,7 @@
 Setelah diklik maka akan diarahkan ke halaman Menu SOP Umum seperti berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/2-halaman-sop-umum.png}
+      \includegraphics[width=12.45cm]{media/sop-umum-unit/2-halaman-sop-umum.png}
       \caption{Halaman Menu SOP Umum}
       \label{fig:bagan-alir}
     \end{figure}
@@ -29,15 +29,13 @@ Pada Menu SOP Umum, ada beberapa fitur yang user dapat gunakan seperti tambah SO
 Untuk melakukan tambah SOP Umum dapat dilakukan dengan klik tombol “Tambah SOP".
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/1-tombol-tambah-umum.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/1-tombol-tambah-umum.png}
     \caption{Tampilan Tombol Tambah SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
 \vspace{-2em}
 
-Setelah klik tombol “Tambah SOP", akan dialihkan ke halaman form tambah SOP Umum. User akan diminta untuk mengisi Judul SOP, Nomor SOP, Tanggal Pembuatan, Tanggal Revisi, Tanggal Efektif, Kata Kunci, memilih SOP Level (Pilih Umum), memilih Status Arsip, dan pilih Lintas Fungsi.
-
-\newpage
+Setelah klik tombol “Tambah SOP", akan dialihkan ke halaman form tambah SOP Umum. Untuk Form SOP Umum, secara tampilan dan kolom isian masih sama seperti Form Tambah SOP Unit seperti akan diminta untuk mengisi Judul SOP, Nomor SOP, Tanggal Pembuatan, Tanggal Revisi, Tanggal Efektif, Kata Kunci, memilih SOP Level (Untuk SOP Umum maka pilih Umum), memilih Status Arsip, dan pilih Lintas Fungsi.
 
 \subsection*{4.2 Export SOP Umum}
 \addcontentsline{toc}{subsection}{4.2 Export SOP Umum}
@@ -45,7 +43,7 @@ Setelah klik tombol “Tambah SOP", akan dialihkan ke halaman form tambah SOP Um
 Untuk Export Data SOP Umum, klik tombol Export SOP Umum, maka otomatis download Data SOP Umum.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/2-export-sop-umum.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/2-export-sop-umum.png}
     \caption{Export SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
@@ -54,12 +52,10 @@ Untuk Export Data SOP Umum, klik tombol Export SOP Umum, maka otomatis download 
 Berikut hasil Export SOP Umum.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=4.35cm]{media/sop-umum-unit/3-hasil-export.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/3-hasil-export.png}
     \caption{Hasil Export SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
-
-\newpage
 
 \subsection*{4.3 Filter SOP Umum}
 \addcontentsline{toc}{subsection}{4.2 Filter SOP Umum}
@@ -67,7 +63,7 @@ Berikut hasil Export SOP Umum.
 Untuk Filter Data SOP Umum, isi atau pilih dengan data yang diinginkan pada header table.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/4-filter-sop-umum.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/4-filter-sop-umum.png}
     \caption{Filter SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
@@ -78,7 +74,7 @@ Untuk Filter Data SOP Umum, isi atau pilih dengan data yang diinginkan pada head
 Untuk melakukan Kirim SOP Umum, jika ingin mengirimkan data untuk diperiksa, klik Icon Pesawat Terbang. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/5-icon-pesawat.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/5-icon-pesawat.png}
     \caption{Kirim Data SOP untuk Diperiksa}
     \label{fig:bagan-alir}
 \end{figure}
@@ -103,17 +99,17 @@ Untuk melihat detail SOP Umum, klik pada nama SOP Umum atau klik ikon mata pada 
 Setelah diklik maka akan diarahkan ke halaman detail SOP Umum. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.35cm]{media/sop-Umum-unit/8-halaman-detail-sop-Umum.png}
+    \includegraphics[width=12.45cm]{media/sop-Umum-unit/8-halaman-detail-sop-Umum.png}
     \label{fig:bagan-alir}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=4.45cm]{media/sop-Umum-unit/8-halaman-detail-sop-Umum-2.png}
+    \includegraphics[width=12.45cm]{media/sop-Umum-unit/8-halaman-detail-sop-Umum-2.png}
     \label{fig:bagan-alir}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=4.75cm]{media/sop-Umum-unit/8-halaman-detail-sop-Umum-3.png}
+    \includegraphics[width=12.45cm]{media/sop-Umum-unit/8-halaman-detail-sop-Umum-3.png}
     \caption{Halaman Detail SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
@@ -130,34 +126,16 @@ Berikut penjelasan fitur pada halaman detail SOP Umum.
     Untuk mengubah SOP Umum, klik tombol "Ubah SOP Umum" dan setelah diklik maka akan diarahkan ke form ubah SOP Umum. Sesuaikan isian pada kolom isi di form Ubah SOP Umum.
 
     \item \textbf{Export PDF SOP Umum}\\
-    Untuk Export SOP Umum, klik tombol Export SOP Umum, maka diarahkan ke halaman preview file PDF yang akan didownload.
+    Untuk Export SOP Umum, klik tombol Export SOP Umum, maka diarahkan ke halaman preview file PDF yang akan didownload. Untuk hasil Export sama seperti hasil Export untuk SOP Unit.
 
     \item \textbf{Tambah Dasar Hukum}\\
-    Untuk melakukan tambah Dasar Hukum dapat dilakukan dengan klik tombol “Tambah Dasar Hukum". Setelah klik tombol “Tambah Dasar Hukum”, maka akan dialihkan ke halaman form tambah Dasar Hukum. User akan diminta untuk mengisi Dasar Hukum. 
-
-    \item \textbf{Tambah Kualifikasi Pelaksana}\\
-    Untuk melakukan tambah Kualifikasi Pelaksana dapat dilakukan dengan klik tombol “Tambah Kualifikasi Pelaksana". Setelah klik tombol “Tambah Kualifikasi Pelaksana”, maka akan dialihkan ke halaman form tambah Kualifikasi Pelaksana. User akan diminta untuk mengisi Kualifikasi Pelaksana. 
-
-    \item \textbf{Tambah Keterkaitan SOP}\\
-    Untuk melakukan tambah Keterkaitan SOP dapat dilakukan dengan klik tombol “Tambah Keterkaitan SOP". Setelah klik tombol “Tambah Keterkaitan SOP”, maka akan dialihkan ke halaman form tambah Keterkaitan SOP. User akan diminta untuk mengisi Keterkaitan SOP. 
-
-    \item \textbf{Tambah Peralatan/Perlengkapan}\\
-    Untuk melakukan tambah Peralatan/Perlengkapan dapat dilakukan dengan klik tombol “Tambah Peralatan/Perlengkapan". Setelah klik tombol “Tambah Peralatan/Perlengkapan”, maka akan dialihkan ke halaman form tambah Peralatan/Perlengkapan. User akan diminta untuk mengisi Peralatan/Perlengkapan. 
-
-    \item \textbf{Tambah Peringatan}\\
-    Untuk melakukan tambah Peringatan dapat dilakukan dengan klik tombol “Tambah Peringatan". Setelah klik tombol “Tambah Peringatan”, maka akan dialihkan ke halaman form tambah Peringatan. User akan diminta untuk mengisi Peringatan. 
-
-    \item \textbf{Tambah Pencatatan \& Pendataan}\\
-    Untuk melakukan tambah Pencatatan \& Pendataan dapat dilakukan dengan klik tombol “Tambah Pencatatan \& Pendataan". Setelah klik tombol “Tambah Pencatatan \& Pendataan”, maka akan dialihkan ke halaman form tambah Pencatatan \& Pendataan. User akan diminta untuk mengisi Pencatatan \& Pendataan. 
-
-    \item \textbf{Tambah Pengesahan}\\
-    Untuk melakukan tambah Pengesahan dapat dilakukan dengan klik tombol “Tambah Pengesahan". Setelah klik tombol “Tambah Pengesahan”, maka akan dialihkan ke halaman form tambah Pengesahan. User akan diminta untuk mengisi Pengesahan. 
+    Untuk melakukan tambah Dasar Hukum dapat dilakukan dengan klik tombol “Tambah Dasar Hukum". Setelah klik tombol “Tambah Dasar Hukum”, maka akan dialihkan ke halaman form tambah Dasar Hukum. Untuk tampilan dan kolom isian Form Tambah Dasar Hukum masih sama seperti Form Tambah Dasar Hukum pada Detail SOP Unit. User akan diminta untuk mengisi Dasar Hukum. 
 
     \item \textbf{Tambah Pelaksana}\\
-    Untuk melakukan tambah Pelaksana dapat dilakukan dengan klik tombol “Tambah Pelaksana”. Setelah klik tombol “Tambah Pelaksana”, maka akan dialihkan ke halaman form tambah Pelaksana. User  mengisi Urutan dan nama Pelaksana.
+    Untuk melakukan tambah Pelaksana dapat dilakukan dengan klik tombol “Tambah Pelaksana”. Setelah klik tombol “Tambah Pelaksana”, maka akan dialihkan ke halaman form tambah Pelaksana. Untuk tampilan dan kolom isian Form Tambah Pelaksana masih sama seperti Form Tambah Pelaksana pada detail SOP Unit. User  mengisi Urutan dan nama Pelaksana.
 
     \item \textbf{Tambah Aktivitas}\\
-    Untuk melakukan tambah Aktivitas dapat dilakukan dengan klik tombol “Tambah Aktivitas”. Setelah klik tombol “Tambah Aktivitas”, maka akan dialihkan ke halaman form tambah Aktivitas. User  mengisi Urutan, pilih Diagram Alir, pilih Pelaksana, mengisi Aktivitas, mengisi Kelengkapan, mengisi Waktu, memilih Umum Kerja, mengisi Output, mengisi Keterangan, pilih Jika Tidak (Khusus Pengambilan Keputusan),  dan pilih Status Konektor.
+    Untuk melakukan tambah Aktivitas dapat dilakukan dengan klik tombol “Tambah Aktivitas”. Setelah klik tombol “Tambah Aktivitas”, maka akan dialihkan ke halaman form tambah Aktivitas. Untuk tampilan dan kolom isian Form Tambah Aktivitas masih sama seperti Form Tambah Aktivitas di Detail SOP Unit. User  mengisi Urutan, pilih Diagram Alir, pilih Pelaksana, mengisi Aktivitas, mengisi Kelengkapan, mengisi Waktu, memilih Umum Kerja, mengisi Output, mengisi Keterangan, pilih Jika Tidak (Khusus Pengambilan Keputusan), dan pilih Status Konektor.
 
 \end{enumerate}
 
@@ -167,12 +145,12 @@ Berikut penjelasan fitur pada halaman detail SOP Umum.
 Jika data SOP Umum belum dikirim untuk diperiksa, user dapat melakukan ubah data SOP Umum. Untuk mengubah data SOP Umum, bisa melalui halaman detail dengan klik tombol "Sunting SOP Umum" atau klik Icon Pencil disebelah kanan Table pada halaman SOP Umum. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.35cm]{media/sop-umum-unit/7-icon-pencil.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/7-icon-pencil.png}
     \caption{Tombol Ubah SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
 
-Setelah diklik maka akan diarahkan ke form ubah SOP Umum. Sesuaikan isian pada kolom isi di form Ubah SOP Umum.
+Setelah diklik maka akan diarahkan ke form ubah SOP Umum. Untuk tampilan dan kolom isian Form Ubah SOP masih sama seperti Form Ubah SOP Unit. User menyesuaikan isian pada kolom isi di form Ubah SOP Umum.
 
 \newpage
 
@@ -182,7 +160,7 @@ Setelah diklik maka akan diarahkan ke form ubah SOP Umum. Sesuaikan isian pada k
 Jika data SOP Umum belum dikirim untuk diperiksa, user dapat melakukan hapus data SOP Umum. Untuk menghapus SOP Umum, klik Icon Sampah disebelah kanan Table dan akan muncul pesan konfirmasi untuk melakukan hapus data. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=4.75cm]{media/sop-umum-unit/8-hapus-sop-umum.png}
+    \includegraphics[width=12.45cm]{media/sop-umum-unit/8-hapus-sop-umum.png}
     \caption{Tampilan Konfirmasi Hapus SOP Umum}
     \label{fig:bagan-alir}
 \end{figure}
