--- a/108-halaman-setuju-unit.tex
+++ b/108-halaman-setuju-unit.tex
@@ -4,7 +4,7 @@
 \noindent Untuk mengakses Halaman Menu Setuju, pada daftar menu sebelah kiri klik Menu pada menu SOP seperti gambar berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Setuju-unit/1-menu-Setuju.png}
+      \includegraphics[width=12.45cm]{media/Setuju-unit/1-menu-Setuju.png}
       \caption{Akses Menu Setuju}
       \label{fig:bagan-alir}
     \end{figure}
@@ -13,7 +13,7 @@
 Setelah diklik maka akan diarahkan ke halaman Menu Setuju seperti berikut:
 \begin{figure}[H]
       \centering
-      \includegraphics[width=12.45cm, height=5.35cm]{media/Setuju-unit/2-halaman-Setuju.png}
+      \includegraphics[width=12.45cm]{media/Setuju-unit/2-halaman-Setuju.png}
       \caption{Halaman Menu Setuju}
       \label{fig:bagan-alir}
     \end{figure}
@@ -27,7 +27,7 @@ Pada Menu Setuju, ada beberapa fitur yang user dapat gunakan seperti Export Data
 Untuk Export Data Setuju, klik tombol Export Setuju, maka otomatis download Data Setuju.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Setuju-unit/1-export-Setuju.png}
+    \includegraphics[width=12.45cm]{media/Setuju-unit/1-export-Setuju.png}
     \caption{Export Setuju}
     \label{fig:bagan-alir}
 \end{figure}
@@ -36,12 +36,12 @@ Untuk Export Data Setuju, klik tombol Export Setuju, maka otomatis download Data
 % Berikut hasil Export Setuju.
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=12.45cm, height=5.75cm]{media/Setuju-unit/2-hasil-export-Setuju.png}
+%     \includegraphics[width=12.45cm]{media/Setuju-unit/2-hasil-export-Setuju.png}
 %     \caption{Hasil Export Setuju}
 %     \label{fig:bagan-alir}
 % \end{figure}
 
-\newpage
+% \newpage
 
 \subsection*{8.2 Filter Setuju}
 \addcontentsline{toc}{subsection}{8.2 Filter Setuju}
@@ -49,7 +49,7 @@ Untuk Export Data Setuju, klik tombol Export Setuju, maka otomatis download Data
 Untuk Filter Data Setuju, isi atau pilih dengan data yang diinginkan pada header table.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=12.45cm, height=5.75cm]{media/Setuju-unit/3-filter-Setuju.png}
+    \includegraphics[width=12.45cm]{media/Setuju-unit/3-filter-Setuju.png}
     \caption{Filter Setuju}
     \label{fig:bagan-alir}
 \end{figure}
